--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ dm-tree = "^0.1.9"
 tfds-nightly = "^4.9.7.dev202503080044"
 keras = "^3.9.0"
 nltk = "^3.9.1"
+transformers = "^4.49.0"
 
 [build-system]
 requires = ["poetry-core"]
