--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ tfds-nightly = "^4.9.7.dev202503080044"
 keras = "^3.9.0"
 nltk = "^3.9.1"
 transformers = "^4.49.0"
+optuna = "^4.2.1"
 
 [build-system]
 requires = ["poetry-core"]
