Include Voice to Text model.

--- a/.gitignore
+++ b/.gitignore
@@ -181,3 +181,6 @@ cython_debug/
 optuna_model.json
 *.keras
 models/
+vosk-model-en-us-0.22/
+vosk-model-small-sv-rhasspy-0.15/
+recognized_text.txt
