--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,9 @@ keras = "^3.9.0"
 nltk = "^3.9.1"
 transformers = "^4.49.0"
 optuna = "^4.2.1"
+pyaudio = "^0.2.14"
+dash = "^2.18.2"
+vosk = "0.3.44"
 
 [build-system]
 requires = ["poetry-core"]
