--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,6 @@ pandas = "^2.1.4"
 matplotlib = "^3.8.2"
 scikit-learn = "^1.4.1.post1"
 tensorflow-io-gcs-filesystem = "<0.35.0"
-tensorflow-macos = ">=2.15.0"
 datetime = "^5.4"
 statsmodels = "^0.14.1"
 pylint = "^3.0.3"
@@ -21,7 +20,7 @@ black = "^24.1.1"
 ruff = "^0.2.1"
 pyarrow = "^15.0.0"
 wheel = "^0.45.1"
-dm-tree = "^0.1.9"
+dm-tree = "^0.1.8"
 tfds-nightly = "^4.9.7.dev202503080044"
 keras = "^3.9.0"
 nltk = "^3.9.1"
@@ -30,6 +29,9 @@ optuna = "^4.2.1"
 pyaudio = "^0.2.14"
 dash = "^2.18.2"
 vosk = "0.3.44"
+tensorflow = "^2.16.2"
+tensorflow-metal = "^1.2.0"
+tensorflow-macos = "^2.16.2"
 
 [build-system]
 requires = ["poetry-core"]
