--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ tensorflow = "^2.16.2"
 tensorflow-metal = "^1.2.0"
 tensorflow-macos = "^2.16.2"
 pytest = "^8.3.5"
+pydantic = "^2.11.3"
 
 [build-system]
 requires = ["poetry-core"]
