--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -22,16 +22,13 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: "3.11"
-      
-      # Configure Poetry to use the system environment
-      - name: Configure Poetry
-        run: poetry config virtualenvs.create false
 
       # Install dependencies
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install poetry
+          poetry config virtualenvs.create false
           poetry install
 
       # Run pytest
