--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,6 @@ numpy = "^1.26.2"
 pandas = "^2.1.4"
 matplotlib = "^3.8.2"
 scikit-learn = "^1.4.1.post1"
-tensorflow-io-gcs-filesystem = "<0.35.0"
 datetime = "^5.4"
 statsmodels = "^0.14.1"
 pylint = "^3.0.3"
@@ -30,10 +29,13 @@ pyaudio = "^0.2.14"
 dash = "^2.18.2"
 vosk = "0.3.44"
 tensorflow = "^2.16.2"
-tensorflow-metal = "^1.2.0"
-tensorflow-macos = "^2.16.2"
 pytest = "^8.3.5"
 pydantic = "^2.11.3"
+
+[tool.poetry.group.macos.dependencies]
+tensorflow-io-gcs-filesystem = "<0.35.0"
+tensorflow-metal = "^1.2.0"
+tensorflow-macos = "^2.16.2"
 
 [build-system]
 requires = ["poetry-core"]
