--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,9 +25,7 @@ keras = "^3.9.0"
 nltk = "^3.9.1"
 transformers = "^4.49.0"
 optuna = "^4.2.1"
-pyaudio = "^0.2.14"
 dash = "^2.18.2"
-vosk = "0.3.44"
 tensorflow = "^2.16.2"
 pytest = "^8.3.5"
 pydantic = "^2.11.3"
@@ -36,6 +34,10 @@ pydantic = "^2.11.3"
 tensorflow-io-gcs-filesystem = "<0.35.0"
 tensorflow-metal = "^1.2.0"
 tensorflow-macos = "^2.16.2"
+
+[tool.poetry.group.pyaudio.dependencies]
+vosk = "0.3.44"
+pyaudio = "^0.2.14"
 
 [build-system]
 requires = ["poetry-core"]
