--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ dash = "^2.18.2"
 tensorflow = "^2.16.2"
 pytest = "^8.3.5"
 pydantic = "^2.11.3"
+python-dotenv = "^1.1.0"
 
 [tool.poetry.group.macos.dependencies]
 tensorflow-io-gcs-filesystem = "<0.35.0"
