--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -4,9 +4,13 @@ on:
   push:
     branches:
       - main
+    paths:
+      - "src/modules/model.py"  # Trigger only if this file is modified
   pull_request:
     branches:
       - main
+    paths:
+      - "src/modules/model.py"  # Trigger only if this file is modified
 
 jobs:
   test:
