--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,8 @@ tensorflow = "^2.16.2"
 pytest = "^8.3.5"
 pydantic = "^2.11.3"
 python-dotenv = "^1.1.0"
+kagglehub = "^0.3.11"
+kaggle = "^1.7.4.2"
 
 [tool.poetry.group.macos.dependencies]
 tensorflow-io-gcs-filesystem = "<0.35.0"
