--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -33,7 +33,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install poetry
           poetry config virtualenvs.create false
-          poetry install --without macos --without pyaudio
+          poetry install --without macos --without pyaudio --without kaggle
 
       # Run pytest
       - name: Run tests with pytest
