--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -5,14 +5,18 @@ on:
     branches:
       - main
     paths:
-      - "src/modules/model.py"  # Trigger only if this file is modified
+      - "src/modules/model_sentiment_analysis.py"  # Trigger only if this file is modified
       - "src/modules/data_processor.py"  # Trigger only if this file is modified
+      - "src/modules/transformer_component.py"
+      - "src/translation_french_english.py"
   pull_request:
     branches:
       - main
     paths:
-      - "src/modules/model.py"  # Trigger only if this file is modified
+      - "src/modules/model_sentiment_analysis.py"  # Trigger only if this file is modified
       - "src/modules/data_processor.py"  # Trigger only if this file is modified
+      - "src/modules/transformer_component.py"
+      - "src/translation_french_english.py"
 
 jobs:
   test:
