--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -33,15 +33,22 @@ jobs:
         with:
           python-version: "3.11"
 
+      # Install uv
+      - name: Install uv
+        uses: astral-sh/setup-uv@v2
+
       # Install dependencies
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install poetry
-          poetry config virtualenvs.create false
-          poetry install --without macos --without pyaudio --without kaggle
+          uv sync --extra dev
+
+      # Run code quality checks
+      - name: Run code quality checks
+        run: |
+          uv run ruff check ./src ./app ./tests
+          uv run ruff format --check ./src ./app ./tests
 
       # Run pytest
       - name: Run tests with pytest
         run: |
-          poetry run pytest
+          uv run pytest
