--- a/.gitignore
+++ b/.gitignore
@@ -105,7 +105,10 @@ ipython_config.py
 #   Similar to Pipfile.lock, it is generally recommended to include uv.lock in version control.
 #   This is especially recommended for binary packages to ensure reproducibility, and is more
 #   commonly ignored for libraries.
-#uv.lock
+# uv
+#   uv.lock should be committed to version control for reproducible builds
+#   This is especially recommended for applications to ensure reproducibility
+# uv.lock
 
 # poetry
 #   Similar to Pipfile.lock, it is generally recommended to include poetry.lock in version control.
