Fixing pytest issues and lint.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,11 +35,13 @@ dependencies = [
     "pydantic>=2.11.3",
     "python-dotenv>=1.1.0",
     "polars>=1.27.1",
+    "vosk>=0.3.44",
 ]
 
 [project.optional-dependencies]
 dev = [
     "pytest>=8.3.5",
+    "pytest-cov>=6.0.0",
     "pylint>=3.0.3",
     "black>=24.1.1",
     "ruff>=0.2.1",
