Fixing yaml file.

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -25,11 +25,11 @@ jobs:
     steps:
       # Checkout the repository
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       # Set up Python
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
           python-version: "3.11"
 
@@ -40,7 +40,7 @@ jobs:
       # Install dependencies
       - name: Install dependencies
         run: |
-          uv sync --extra dev
+          uv sync --extra dev --extra audio
 
       # Run code quality checks
       - name: Run code quality checks
