--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -51,4 +51,4 @@ jobs:
       # Run pytest (excludes audio-dependent modules like speech_to_text)
       - name: Run tests with pytest
         run: |
-          uv run python -m pytest tests/ -v
+          uv run pytest
