--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,6 +46,7 @@ dev = [
     "black>=24.1.1",
     "ruff>=0.2.1",
     "scikit-optimize>=0.9.0",
+    "pre-commit>=4.0.0",
 ]
 macos = [
     "tensorflow-io-gcs-filesystem<0.35.0",
